css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

p {
    line-height: 2rem;
}

.button-collapse {
    color: #26a69a;
}

.parallax-container {
    min-height: 380px;
    line-height: 0;
    height: auto;
    color: rgba(255, 255, 255, .9);
}

.icon-block {
    padding: 0 15px;
}

.icon-block .material-icons {
    font-size: inherit;
}

footer.page-footer {
    margin: 0;
}

.map-info-window {
    margin-right: 14px;
}

.kingblue {
    background-color: rgb(6, 6, 192)
}

